--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,21 @@
 <head>
   <link rel="stylesheet" href="css/app.css" type="text/css" />
+  <script
+    src="https://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
 </head>
 <body>
-  <h1>Index</h1>
+  <header>
+    <h1>restaurant<span>Picker</span></h1>
+    <h2>Find out today's meal!</h2>
+  </header>
+
+  <section class="form">
+    <input type="text" id="pickerInput" placeholder="Insert your restaurant here...">
+  </section>
+
+  <ul class="list">
+  </ul>
   <script src="js/app.js" type="text/javascript"></script>
 </body>
